--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ b{
         bottom: 0;
         right: 0;
         height: 100vh;
-        width: 99vw;
+        width: 100%;
         margin: 0 auto;
     }
     .top{
