--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,7 @@ b{
         height: 100vh;
         width: 100%;
         margin: 0 auto;
+        object-fit: cover;
     }
     .top{
         margin-top: 20px;
