--- a/style/style.css
+++ b/style/style.css
@@ -444,7 +444,7 @@ b{
         left: 15px;
         width: 22vh;
         height: 50px;
-        
+        z-index: 999;
     }
     .container{
         width: 75%;
